OSJ-309 - EntityAttribute metadata filter generates duplicate attributes
https://issues.shibboleth.net/jira/browse/OSJ-309

Handle duplicate Attributes but leave values for now.